# qt_wayland_globalshortcut_via_portal

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  README.md  main.cpp  my_xdg_exported.cpp  my_xdg_exported.h  wayland_shortcut.cpp  wayland_shortcut.h
